<resources>
    <string name="app_name">Koperasi</string>
    <string name="title_activity_navigation_drawer">MainActivity</string>
    <string name="title_activity_navigate_drawer">NavigateDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_navigate_drawer_activitys">NavigateDrawerActivitys</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_angsuran">Tagihan</string>
    <string name="menu_pinjaman">Pinjaman</string>
    <string name="menu_simpanan">Simpanan</string>
    <string name="menu_setting">Profile</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="textView_login">Silahkan Login!</string>
    <string name="textView_login_detail">Silahkan input username dan password</string>
    <string name="textView_title_apps">Aplikasi Koperasi</string>
    <string name="editText_password">Password</string>
    <string name="textView_lupa_password">Lupa Password?</string>
    <string name="editText_username">Username</string>
</resources>
